# obstack

./: .gitignore  CMakeLists.txt  NOTICE  README.md  build.sh
rpm/: obstack-build.sh  obstack.spec
src/: CMakeLists.txt  main.cpp  obstack.cpp  obstack.h
src/bfd/: bfd_utils.cpp  bfd_utils.h  config.h
src/common/: config.cpp  config.h  error.h  log.cpp  log.h
src/lib/: macro_utils.h  signal.cpp  signal.h
src/llvmtool/: llvm-dwarfdump.cpp  llvm-dwarfdump.h
src/utils/: color_printf.h  defer.h  util.h
